optimized, fixed old issues, added new practiced features
