# storage/api-docs/api-docs.json
@@ -1822,101 +1822,6 @@
             }
         },
         "/orders/{orderId}": {
-            "get": {
-                "tags": [
-                    "Orders"
-                ],
-                "summary": "Get order",
-                "description": "Get order",
-                "operationId": "89d630bcfa2fe280cc140a9819520e1e",
-                "parameters": [
-                    {
-                        "name": "orderId",
-                        "in": "path",
-                        "description": "Order id",
-                        "required": false,
-                        "schema": {
-                            "type": "integer",
-                            "default": 1,
-                            "example": 6
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Order retrieved successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Order created successfully."
-                                        },
-                                        "error": {
-                                            "type": "boolean",
-                                            "example": "false"
-                                        },
-                                        "data": {
-                                            "properties": {
-                                                "order": {
-                                                    "properties": {
-                                                        "id": {
-                                                            "type": "integer",
-                                                            "example": "111"
-                                                        },
-                                                        "brand": {
-                                                            "type": "string",
-                                                            "example": "Brand"
-                                                        },
-                                                        "name": {
-                                                            "type": "string",
-                                                            "example": "Model"
-                                                        },
-                                                        "status": {
-                                                            "type": "string",
-                                                            "example": "delivering"
-                                                        },
-                                                        "order_date": {
-                                                            "type": "string",
-                                                            "example": "2025-03-30 03:18:10"
-                                                        },
-                                                        "delivery_date": {
-                                                            "type": "string",
-                                                            "example": "null"
-                                                        },
-                                                        "price": {
-                                                            "type": "number",
-                                                            "format": "double",
-                                                            "example": "33.33"
-                                                        },
-                                                        "order_quantity": {
-                                                            "type": "integer",
-                                                            "example": "4"
-                                                        },
-                                                        "image": {
-                                                            "type": "string",
-                                                            "example": "path/to/image"
-                                                        }
-                                                    },
-                                                    "type": "object"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
             "put": {
                 "tags": [
                     "Orders"
